# fast-voxel-rust

./: Cargo.toml  LICENSE  build.rs  scene.json  scene_vox.json  test.vox  vox2josn.py
examples/example_shaders/: main.wgsl
examples/test/: main.rs
fast-voxel-lib/: Cargo.toml
fast-voxel-lib/src/: lib.rs  render.rs  voxel.rs
fast-voxel-lib/src/render/: camera.rs  mod.rs
fast-voxel-lib/src/shader_std/: header.wgsl  rand.wgsl  std.wgsl  uniforms.wgsl  vertex.wgsl
fast-voxel-lib/src/shader_std/render/: def.wgsl  ray_casting.wgsl  ray_trasing.wgsl  render.wgsl
fast-voxel-perprocessor/: Cargo.toml
fast-voxel-perprocessor/src/: lib.rs  main.rs
fast-voxel-perprocessor/src/shader_std/: std_rand.wgsl
shader_std/: header.wgsl  math.wgsl  rand.wgsl  std.wgsl  uniforms.wgsl  vertex.wgsl
shader_std/render/: ray_casting.wgsl  ray_trasing.wgsl  render.wgsl  render_def.wgsl
src/: .gitignore  compiled.wgsl  lib.rs  main.rs
src/render/: camera.rs  mod.rs
src/shaders/: eng_header.wgsl  eng_rand.wgsl  eng_vertex.wgsl  main.wgsl  ray_trasing.wgsl
wgsl-structure-converter/: Cargo.toml
wgsl-structure-converter/src/: lib.rs
