[workspace]
members = [
    "fast-voxel-lib",
    "fast-voxel-perprocessor",
]
resolver = "2"

[package]
name = "fast-voxel-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
fast-voxel-perprocessor = { path = "fast-voxel-perprocessor" }

[dependencies]
fast-voxel-lib = { path = "fast-voxel-lib" }
fast-voxel-perprocessor = { path = "fast-voxel-perprocessor" }
pollster = "0.3.0"
cfg-if = "1"
env_logger = "0.11.3"
winit = { version = "0.29", features = ["rwh_05"] }
log = "0.4.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
