[workspace]
members = [
    "wgsl-structure-converter",
]
resolver = "2"

[package]
name = "fast-voxel-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
gimura-preprocessor-lib = "0.1.2"

[dependencies]
cfg-if = "1"
pollster = "0.3"

once_cell = "1.19.0"
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.19.3"
bytemuck = { version = "1.12", features = ["derive"] }
regex = "1.10.5"
cgmath = "0.18.0"
phf = {version = "0.11.2", features = ["macros"]}
serde_json = "1.0.120"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
